<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.user.flight_booking.MainActivity"
    android:weightSum="1">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="83dp"
        app:srcCompat="@drawable/flight"
        android:id="@+id/imageView"
        android:layout_centerHorizontal="true" />
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <Button
        android:text="@string/btL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btLogin"
        android:layout_below="@+id/btDestination"
        android:layout_toLeftOf="@+id/btBook"
        android:layout_alignLeft="@+id/btDestination"
        android:layout_alignStart="@+id/btDestination"
        android:onClick="Log" />

    <Button
        android:text="@string/btC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btBook"
        android:id="@+id/btContact"
        android:layout_alignRight="@+id/btBook"
        android:layout_alignEnd="@+id/btBook"
        android:layout_toRightOf="@+id/btDestination"
        android:layout_toEndOf="@+id/btDestination"
        android:onClick="Contact" />

    <Button
        android:text="@string/btB"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:id="@+id/btBook"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="57dp"
        android:onClick="Book" />

    <Button
        android:text="@string/btD"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:id="@+id/btDestination"
        android:layout_above="@+id/btContact"
        android:layout_toLeftOf="@+id/btBook"
        android:layout_toStartOf="@+id/btBook"
        style="@style/Widget.AppCompat.Button.Small"
         />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ratingBar"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Rate us "
        android:layout_above="@+id/ratingBar"
        android:layout_alignLeft="@+id/btDestination"
        android:layout_alignStart="@+id/btDestination"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp"
        android:textSize="24sp"
        android:textColor="@android:color/holo_green_light" />

    <Button
        android:text="@string/btS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btShare"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:onClick="Share" />

</RelativeLayout>

</LinearLayout>
